Clean up the public side

--- a/react-app/localisation/localisation.csv
+++ b/react-app/localisation/localisation.csv
@@ -4,3 +4,5 @@ nav_what,What?,Was?,什么
 nav_when,When?,Wann?,什么时候
 nav_where,Where?,Woher?,哪里
 nav_how,How?,Wie?,怎么样
+nav_go,Go,Los,走
+nav_password,Password,Passwort,密码
